# inf1220

./: README.md  pyproject.toml
.codex/packets/packet-ctrlr-00-contracts/: contract.json
.codex/packets/packet-ctrlr-01-trace/: contract.json
.codex/packets/packet-ctrlr-02-control/: contract.json
.codex/packets/packet-ctrlr-03-experiment/: contract.json
.codex/packets/packet-ctrlr-04-viz/: contract.json
.codex/packets/packet-ctrlr-05-otel/: contract.json
.codex/packets/packet-obs-00-contracts/: contract.json
.codex/packets/packet-obs-01-ingest/: contract.json
.codex/packets/packet-obs-02-propose/: contract.json
.codex/packets/packet-obs-03-materialize/: contract.json
content/: manifest.json
content/docs/: GUIDE.md  INVENTORY.md  WORKFLOW.md  ctrlr_bench.md  ctrlr_surfacing_spec_plant_a_plant_b_and_default_aba_talk_mode.md  ctrlr_v_0_1.md  pillars.md
content/material/: inf1220_m1_topics_extracted_with_math_and_pointers.md  math.md
content/material/objectives/: objectives.dag.json  struct_report.json  tp1.extracted.json
content/material/syllabus/: Programmation Java en ligne - Introduction #U00e0 la programmation.md
content/material/tp1/drills/: drill_blocks.json
content/material/tp1/eval/: eval_summary.json
content/material/tp1/flow/: learning_flow.json
content/material/tp1/manifest/: material.manifest.json
content/material/tp1/objectives/: objectives.closure.json
src/ctrlr/: __init__.py  contracts.py  experiment.py  mermaid.py
tests/: test_contracts.py  test_experiment.py  test_mermaid.py
(+16 files in other folders)
