[project]
name = "ctrlr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
aux = ["marimo", "pytest", "hypothesis", "snoop", "birdseye"]
otel = ["opentelemetry-api", "opentelemetry-sdk"]
